--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,13 @@
 {
-  "crons": [
-    {
-      "path": "/api/cron/refresh-data",
-      "schedule": "0 0 * * *"
-    }
-  ]
+  "version": 2,
+  "buildCommand": "npm run build",
+  "devCommand": "npm run dev",
+  "installCommand": "npm install",
+  "framework": "nextjs",
+  "regions": ["sin1"],
+  "env": {
+    "NEXT_PUBLIC_SUPABASE_URL": "@next_public_supabase_url",
+    "NEXT_PUBLIC_SUPABASE_ANON_KEY": "@next_public_supabase_anon_key",
+    "SUPABASE_SERVICE_ROLE_KEY": "@supabase_service_role_key"
+  }
 } 
