--- a/vercel.json
+++ b/vercel.json
@@ -8,8 +8,6 @@
   "env": {
     "NEXT_PUBLIC_SUPABASE_URL": "@next_public_supabase_url",
     "NEXT_PUBLIC_SUPABASE_ANON_KEY": "@next_public_supabase_anon_key",
-    "SUPABASE_SERVICE_ROLE_KEY": "@supabase_service_role_key",
-    "URA_ACCESS_KEY": "@ura_access_key",
-    "CRON_SECRET": "@cron_secret"
+    "SUPABASE_SERVICE_ROLE_KEY": "@supabase_service_role_key"
   }
 } 
